# france-fintech-friction-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  external-links.yml
artifacts/: data_quality.json  funnel.csv  intervention_scorecard.csv  review_latency.csv  segment_friction.csv  stage_durations.csv  summary.json  weekly_kpis.csv  weight_sensitivity.csv
config/: model_assumptions.yml
dashboard/: app.py
docs/: 90_day_plan.md  claims_register.md  data_dictionary.md  decision_one_pager.md  executive_memo.md  experiment_preregistration.md  french_research_protocol.md  interview_defence_guide.md  methodology.md  recruiter_walkthrough.md  role_evidence_map.md
scripts/: check_external_links.py  generate_data.py  run_analysis.py
sql/: 01_funnel.sql  02_segment_friction.sql  03_weekly_kpis.sql  04_stage_durations.sql  05_review_latency.sql
src/friction_lab/: __init__.py  config.py  generate.py  metrics.py
tests/: conftest.py  test_analysis.py  test_config.py  test_dashboard.py  test_data_contract.py  test_docs.py  test_metrics.py
