[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "france-fintech-friction-lab"
version = "0.1.0"
description = "A transparent Strategy & Operations case on remote fintech onboarding in France."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "Whitney Ankrah" }]
dependencies = [
  "duckdb>=1.2,<2",
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "plotly>=6,<7",
  "pyarrow>=23.0.1,<24",
  "pyyaml>=6,<7",
  "streamlit>=1.50,<2",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.10,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7.1,<8",
  "ruff>=0.9,<1",
]

[project.urls]
Repository = "https://github.com/ankrahwhitney/france-fintech-friction-lab"

[tool.hatch.build.targets.wheel]
packages = ["src/friction_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=friction_lab --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["friction_lab"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
